RM-1124 (RM user can create a folder within the unfiled records area) RM-1125 (RM user can delete a folder within the unfiled records area) RM-1126 (RM user can edit the meta-data of a folder within the unfiled records area) RM-1127 (RM user can view the details of a folder in the unfiled records area)
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/HEAD@60639 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/config/alfresco/messages/rm.properties
+++ b/rm-share/config/alfresco/messages/rm.properties
@@ -362,6 +362,8 @@ details.hold-container.title=Hold created on {0}
 details.hold-container.title.date-format=dd mmmm yyyy 'at' HH:MM:ss
 details.hold-container.reason=Reason for Hold
 details.hold-container.reason.none=Not Available
+# Unfiled Records Container Child
+details.unfiled-records-container-child.identifier=Folder Identifier
 
 ## File Upload (upload new version)
 label.filter-description=Same type as {0}
