RM-1147: A user can create a 'vanilla' or DOD compliant records management site  * RM-1178: Add DOD site and file plan types to DOD specific content model  * RM-1179: Extend create site dialog to set allow creation of DOD compliant RM site  * RM-1180: Create a patch to update all existing file plans to be, by default, DOD compliant
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/HEAD@60943 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/config/alfresco/messages/rm.properties
+++ b/rm-share/config/alfresco/messages/rm.properties
@@ -388,6 +388,9 @@ details.record.originating-organization=Originating Organization
 description.recordsManagementSite=Records Management Site
 title.recordsManagementSite=Records Management
 type.recordsManagementSite=Records Management Site
+description.dod5015RecordsManagementSite=DOD 5015 Compliant Records Management Site
+title.dod5015RecordsManagementSite=Records Management
+type.dod5015RecordsManagementSite=DOD 5105 Records Management Site
 
 ## Console title
 link.managementConsole=Management Console
