--- a/rm-share/config/alfresco/messages/rm.properties
+++ b/rm-share/config/alfresco/messages/rm.properties
@@ -388,9 +388,9 @@ details.record.originating-organization=Originating Organization
 description.recordsManagementSite=Records Management Site
 title.recordsManagementSite=Records Management
 type.recordsManagementSite=Records Management Site
-description.dod5015RecordsManagementSite=DOD 5015 Compliant Records Management Site
-title.dod5015RecordsManagementSite=Records Management
-type.dod5015RecordsManagementSite=DOD 5105 Records Management Site
+compliance.standard=Standard
+compliance.dod5015=DoD 5015.2-STD
+label.compliance=Compliance
 
 ## Console title
 link.managementConsole=Management Console
@@ -424,3 +424,4 @@ Alfresco.forms.validation.rmVitalRecordPeriodMandatory.message=Please select a r
 ## Forms
 form.control.object-picker.items-list.empty=No Items
 form.control.object-picker.items-list.loading=Loading ...
+
