--- a/rm-po/pom.xml
+++ b/rm-po/pom.xml
@@ -30,6 +30,23 @@
                </suiteXmlFiles>
             </configuration>
          </plugin>
+         <plugin>
+            <!-- Configuration triggered by mvn antrun:run, used by Bamboo to stop server -->
+            <artifactId>maven-antrun-plugin</artifactId>
+            <executions>
+               <execution>
+                  <id>default-cli</id>
+                  <configuration>
+                     <target>
+                        <echo>Stopping Alfresco...</echo>
+                        <exec executable="${basedir}/target/alf-installation/alfresco.sh" dir="target/alf-installation" failonerror="true">
+                           <arg value="stop" />
+                        </exec>
+                     </target>
+                  </configuration>
+               </execution>
+            </executions>
+         </plugin>
       </plugins>
    </build>
    <dependencies>
