RM-1144 & RM-1145 - changes to file to action
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/HEAD@61046 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/build.xml
+++ b/build.xml
@@ -114,4 +114,7 @@
       </condition>
       <antcall target="copyWebDirectory"></antcall>
    </target>
+
+   <target name="quickBuildAndDeployExploded" depends="install, deployExploded" description="" />
+
 </project>
