RM-1144 & RM-1145 - changes to file to action - post review changes
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/HEAD@61188 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/config/alfresco/messages/rm.properties
+++ b/rm-share/config/alfresco/messages/rm.properties
@@ -425,3 +425,12 @@ Alfresco.forms.validation.rmVitalRecordPeriodMandatory.message=Please select a r
 form.control.object-picker.items-list.empty=No Items
 form.control.object-picker.items-list.loading=Loading ...
 
+## File-to substitution suggestions
+file-to.substitution.date.day.short.label=Short Day (Mon)
+file-to.substitution.date.day.long.label=Long Day (Monday)
+file-to.substitution.date.day.number.label=Day Number (1)
+file-to.substitution.date.month.short.label=Short Month (Jan)
+file-to.substitution.date.month.long.label=Long Month (January)
+file-to.substitution.date.month.number.label=Month Number (01)
+file-to.substitution.date.year.short.label=Short Year (14)
+file-to.substitution.date.year.long.label=Long Year (2014)
