Refactored code/config for the RM page objects
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/HEAD@61290 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-po/pom.xml
+++ b/rm-po/pom.xml
@@ -60,8 +60,14 @@
          <artifactId>share-po</artifactId>
          <version>${dependency.share.po.version}</version>
          <type>test-jar</type>
-         <!-- FIXME!!! -->
-         <!-- <scope>test</scope> -->
+         <scope>test</scope>
+      </dependency>
+      <!-- FIXME: Remove this dependency after webrone has 2.3 has been released!!! -->
+      <dependency>
+         <groupId>org.alfresco</groupId>
+         <artifactId>webdrone</artifactId>
+         <version>2.3-SNAPSHOT</version>
+         <type>jar</type>
       </dependency>
       <dependency>
          <groupId>org.uncommons</groupId>
