Fixed functional test configuration
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/HEAD@61310 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-po/pom.xml
+++ b/rm-po/pom.xml
@@ -159,6 +159,7 @@
                               </artifactItem>
                            </artifactItems>
                            <outputDirectory>${project.build.directory}/amps</outputDirectory>
+                           <useBaseVersion>true</useBaseVersion>
                         </configuration>
                      </execution>
                   </executions>
