--- a/rm-po/pom.xml
+++ b/rm-po/pom.xml
@@ -62,6 +62,13 @@
          <type>test-jar</type>
          <scope>test</scope>
       </dependency>
+      <!-- FIXME: Remove this dependency after share-po 2.1 has been released!!! -->
+      <dependency>
+         <groupId>org.alfresco</groupId>
+         <artifactId>webdrone</artifactId>
+         <version>2.3</version>
+         <type>jar</type>
+      </dependency>
       <dependency>
          <groupId>org.uncommons</groupId>
          <artifactId>reportng</artifactId>
