--- a/rm-po/pom.xml
+++ b/rm-po/pom.xml
@@ -8,7 +8,7 @@
    <modelVersion>4.0.0</modelVersion>
    <artifactId>alfresco-rm-po</artifactId>
    <properties>
-      <dependency.share.po.version>2.1-SNAPSHOT</dependency.share.po.version>
+      <dependency.share.po.version>4.3.0-BF-SNAPSHOT</dependency.share.po.version>
    </properties>
    <build>
       <plugins>
@@ -61,13 +61,6 @@
          <version>${dependency.share.po.version}</version>
          <type>test-jar</type>
          <scope>test</scope>
-      </dependency>
-      <!-- FIXME: Remove this dependency after share-po 2.1 has been released!!! -->
-      <dependency>
-         <groupId>org.alfresco</groupId>
-         <artifactId>webdrone</artifactId>
-         <version>2.3</version>
-         <type>jar</type>
       </dependency>
       <dependency>
          <groupId>org.uncommons</groupId>
