RM-1169, File-to path substitution to include node parameter
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/HEAD@63051 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/config/alfresco/messages/rm.properties
+++ b/rm-share/config/alfresco/messages/rm.properties
@@ -426,11 +426,18 @@ form.control.object-picker.items-list.empty=No Items
 form.control.object-picker.items-list.loading=Loading ...
 
 ## File-to substitution suggestions
-file-to.substitution.date.day.short.label=Short Day (Mon)
-file-to.substitution.date.day.long.label=Long Day (Monday)
-file-to.substitution.date.day.number.label=Day Number (1)
-file-to.substitution.date.month.short.label=Short Month (Jan)
-file-to.substitution.date.month.long.label=Long Month (January)
-file-to.substitution.date.month.number.label=Month Number (01)
-file-to.substitution.date.year.short.label=Short Year (14)
-file-to.substitution.date.year.long.label=Long Year (2014)
+file-to.substitution.node.rma.origionalName.label=Original node name
+file-to.substitution.node.rma.dateFiled.label=Date filed
+file-to.substitution.node.cm.title.label=Title
+file-to.substitution.node.cm.description.label=Description
+file-to.substitution.node.rma.location.label=Location
+file-to.substitution.node.rma.dbUniquenessId.label=Unique database id
+file-to.substitution.node.rma.identifier.label=Identifier
+file-to.substitution.date.day.short.label=Short Day (e.g. Mon)
+file-to.substitution.date.day.long.label=Long Day (e.g. Monday)
+file-to.substitution.date.day.number.label=Day Number (e.g. 1)
+file-to.substitution.date.month.short.label=Short Month (e.g. Jan)
+file-to.substitution.date.month.long.label=Long Month (e.g. January)
+file-to.substitution.date.month.number.label=Month Number (e.g. 01)
+file-to.substitution.date.year.short.label=Short Year (e.g. 14)
+file-to.substitution.date.year.long.label=Long Year (e.g. 2014)
