RM-1234, Changed formatting of date.year.week substitution to match help text
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/HEAD@63075 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/config/alfresco/messages/rm.properties
+++ b/rm-share/config/alfresco/messages/rm.properties
@@ -434,10 +434,15 @@ file-to.substitution.node.rma.location.label=Location
 file-to.substitution.node.rma.dbUniquenessId.label=Unique database id
 file-to.substitution.node.rma.identifier.label=Identifier
 file-to.substitution.date.day.short.label=Short Day (e.g. Mon)
+file-to.substitution.date.day.label=Day (e.g. Mon)
 file-to.substitution.date.day.long.label=Long Day (e.g. Monday)
 file-to.substitution.date.day.number.label=Day Number (e.g. 1)
+file-to.substitution.date.day.year.label=Day of Year (e.g. 216)
 file-to.substitution.date.month.short.label=Short Month (e.g. Jan)
+file-to.substitution.date.month.label=Month (e.g. Jan)
 file-to.substitution.date.month.long.label=Long Month (e.g. January)
 file-to.substitution.date.month.number.label=Month Number (e.g. 01)
 file-to.substitution.date.year.short.label=Short Year (e.g. 14)
+file-to.substitution.date.year.label=Year (e.g. 14)
 file-to.substitution.date.year.long.label=Long Year (e.g. 2014)
+file-to.substitution.date.year.week.label=Year Week (e.g. 31)
