RM-1203 (As a records user I want to create a new hold so that I can add records to it)
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/HEAD@63190 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/config/alfresco/messages/rm.properties
+++ b/rm-share/config/alfresco/messages/rm.properties
@@ -35,7 +35,8 @@ label.set.security=Security
 label.set.vitalRecord=Vital Record
 label.set.disposition=Disposition Schedule
 label.set.customMetadata=Custom Properties
-
+label.hold.reason=Reason
+label.hold.delete.empty=Delete Hold When Empty
 label.recordLevelDisposition=Applied to
 label.record=Record
 label.folder=Record Folder
