--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/documentlibrary/documentlist-v2.get.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/documentlibrary/documentlist-v2.get.properties
@@ -1,6 +1,8 @@
 ## Buttons
 button.new-category=New Category
 button.new-folder=New Folder
+button.new-unfiledRecords-folder=New Folder
+button.new-hold=New Hold
 button.upload=File
 button.import=Import
 button.export-all=Export All
@@ -26,6 +28,8 @@ label.new-rma_recordCategory.title=New Record Category
 label.new-rma_recordCategory.header=Record Category Details
 label.new-rma_recordFolder.title=New Record Folder
 label.new-rma_recordFolder.header=Record Folder Details
+label.new-rma_holdContainerChild.title=New Hold
+label.new-rma_holdContainerChild.header=New Hold Details
 label.new-rma_unfiledRecordContainerChild.title=New Folder
 label.new-rma_unfiledRecordContainerChild.header=Folder Details
 label.new-rma_nonElectronicDocument.title=Non-electronic Record
@@ -60,11 +64,17 @@ message.multiple-delete.success=Successfully deleted {0} item(s)
 title.multiple-delete.confirm=Confirm Multiple Delete
 message.multiple-delete.confirm=Are you sure you want to delete the following {0} items?
 message.multiple-delete.please-wait=Please wait. Files being deleted...
-message.new-folder.failure=Couldn't create folder
-message.new-category.failure=Couldn't create category
-message.new-folder.success=Folder ''{0}'' created
+message.new-unknown.error=The type ''{0}'' is unknown!"
+message.new-category.failure=Couldn't create category ''{0}''
+message.new-folder.failure=Couldn't create folder ''{0}''
 message.new-record.failure=Couldn't create ''{0}''
+message.new-unfiledRecordsFolder.failure=Couldn't create unfiled records folder ''{0}''
+message.new-hold.failure=Couldn't create hold ''{0}''
+message.new-category.success=Category ''{0}'' created
+message.new-folder.success=Folder ''{0}'' created
 message.new-record.success=Record ''{0}'' created
+message.new-unfiledRecordsFolder.success=Unfiled records folder ''{0}'' created
+message.new-hold.success=Hold ''{0}'' created
 message.load-top-level-assets.failure=Couldn't export all because top level assets couldn't be loaded
 message.nothing-to-export=Nothing to export
 
