RM-1144, Added max suggestions config, custom properties inclusion and made ui tests more robust
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/HEAD@63260 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/config/alfresco/messages/rm.properties
+++ b/rm-share/config/alfresco/messages/rm.properties
@@ -427,13 +427,22 @@ form.control.object-picker.items-list.empty=No Items
 form.control.object-picker.items-list.loading=Loading ...
 
 ## File-to substitution suggestions
-file-to.substitution.node.rma.origionalName.label=Original node name
-file-to.substitution.node.rma.dateFiled.label=Date filed
 file-to.substitution.node.cm.title.label=Title
 file-to.substitution.node.cm.description.label=Description
+file-to.substitution.node.cm.accessed.label=Last accessed
+file-to.substitution.node.cm.created.label=When created
+file-to.substitution.node.cm.creator.label=Creator
+file-to.substitution.node.cm.modified.label=Last modified
+file-to.substitution.node.cm.modifier.label=Modifier
+file-to.substitution.node.cm.name.label=Name
+file-to.substitution.node.rma.origionalName.label=Original node name
+file-to.substitution.node.rma.dateFiled.label=Date filed
 file-to.substitution.node.rma.location.label=Location
 file-to.substitution.node.rma.dbUniquenessId.label=Unique database id
 file-to.substitution.node.rma.identifier.label=Identifier
+file-to.substitution.node.sys.node-uuid.label=Node id
+file-to.substitution.node.sys.store-identifier.label=Store id
+file-to.substitution.node.sys.store-protocol.label=Store protocol
 file-to.substitution.date.day.short.label=Short Day (e.g. Mon)
 file-to.substitution.date.day.label=Day (e.g. Mon)
 file-to.substitution.date.day.long.label=Long Day (e.g. Monday)
