RM-1205 (As a records user I want to edit the details of an existing hold so that I can change its details if circumstances change)
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/HEAD@63414 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/config/alfresco/messages/rm.properties
+++ b/rm-share/config/alfresco/messages/rm.properties
@@ -137,6 +137,8 @@ actions.reject=Reject
 actions.request-info=Request Information
 actions.file-destruction-report=Generate Destruction Report
 actions.end-retention=End Retention
+action.edit.hold=Edit Hold
+actions.delete.hold=Delete Hold
 
 ## File Plan Action Outcomes
 message.multi-select={0} selected items
