Renamed the arfitactId after renaming rm-po to rm-ui-tests
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/HEAD@63500 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-ui-tests/pom.xml
+++ b/rm-ui-tests/pom.xml
@@ -6,7 +6,7 @@
       <version>2.2-SNAPSHOT</version>
    </parent>
    <modelVersion>4.0.0</modelVersion>
-   <artifactId>alfresco-rm-po</artifactId>
+   <artifactId>alfresco-rm-ui-tests</artifactId>
    <properties>
       <dependency.share.po.version>4.3.0-BF-SNAPSHOT</dependency.share.po.version>
    </properties>
