RM-1318 (UX issue - File a record to the Unfiled Records folder)
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/HEAD@63718 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/documentlibrary/documentlist-v2.get.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/documentlibrary/documentlist-v2.get.properties
@@ -4,6 +4,7 @@ button.new-folder=New Folder
 button.new-unfiledRecords-folder=New Folder
 button.new-hold=New Hold
 button.upload=File
+button.declare-record=Declare Record
 button.import=Import
 button.export-all=Export All
 button.manage-permissions=Manage Permissions
