Added scm url to the parent pom file
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/HEAD@63867 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
    <scm>
       <connection>https://svn.alfresco.com/repos/alfresco-open-mirror/modules/recordsmanagement/HEAD</connection>
       <developerConnection>https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/HEAD</developerConnection>
+      <url>https://fisheye.alfresco.com/changelog/alfresco-enterprise</url>
    </scm>
    <issueManagement>
       <system>JIRA</system>
