RM-1200/RM-1201, Added functionality to copy and move folders and records with unfiled records
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/HEAD@64018 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/modules/documentlibrary/copy-move-link-file-to.get.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/modules/documentlibrary/copy-move-link-file-to.get.properties
@@ -3,6 +3,7 @@ header=Choose the destination folder
 
 ## Copy To
 copy.node.root=File Plan
+copy.node.unfiledroot=Unfiled Records
 copy.title.single=Copy {0} to...
 copy.title.multi=Copy {0} items to...
 copy.button=Copy
@@ -13,6 +14,7 @@ copy.message.failure=Couldn't copy the items
 
 ## Move To
 move.node.root=File Plan
+move.node.unfiledroot=Unfiled Records
 move.title.single=Move {0} to...
 move.title.multi=Move {0} items to...
 move.button=Move
