Story: RM-1207 (As a records user I want to remove records from a hold(s) that I have permission to see so that I can unfreeze a record)
Sub-task: RM-1334 (Implement UI for removing an item from hold(s))

git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/HEAD@64023 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/modules/documentlibrary/hold/remove-from-hold.get.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/modules/documentlibrary/hold/remove-from-hold.get.properties
@@ -1,3 +1,5 @@
 failure.template.not.loaded=Could not load remove from hold template
-message.loading.holds=Loading the list of holds
+message.empty.holds=The selected node is not in any holds
 header.remove-hold=Remove from Hold
+message.remove-success=The selected node has been successfully removed from the selected hold
+message.remove-failure=The selected node could not be removed from the selected hold(s): {0}
