Refactor RM model so that rma:hold is used
 * rma:holdContainerChild removed
 * capabilities, forms and actions updated
 * UI tests updated
 * relates to RM-1203, RM-1205, RM-1209



git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/HEAD@64116 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/documentlibrary/documentlist-v2.get.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/documentlibrary/documentlist-v2.get.properties
@@ -29,8 +29,8 @@ label.new-rma_recordCategory.title=New Record Category
 label.new-rma_recordCategory.header=Record Category Details
 label.new-rma_recordFolder.title=New Record Folder
 label.new-rma_recordFolder.header=Record Folder Details
-label.new-rma_holdContainerChild.title=New Hold
-label.new-rma_holdContainerChild.header=New Hold Details
+label.new-rma_hold.title=New Hold
+label.new-rma_hold.header=New Hold Details
 label.new-rma_unfiledRecordContainerChild.title=New Folder
 label.new-rma_unfiledRecordContainerChild.header=Folder Details
 label.new-rma_nonElectronicDocument.title=Non-electronic Record
