Refactor RM model so that rma:hold is used
 * Remaining work to make it consistent for the UI part

git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/HEAD@64188 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/config/alfresco/messages/rm.properties
+++ b/rm-share/config/alfresco/messages/rm.properties
@@ -361,10 +361,10 @@ details.undeclared-record.info=Incomplete Record
 details.transfer-container.title=Transfer {0}
 details.transfer-container.is-accession=<em>Note:</em> Transfer type is Accession
 # Hold Container
-details.hold-container.title=Hold created on {0}
-details.hold-container.title.date-format=dd mmmm yyyy 'at' HH:MM:ss
-details.hold-container.reason=Reason for Hold
-details.hold-container.reason.none=Not Available
+details.hold.title=Hold created on {0}
+details.hold.title.date-format=dd mmmm yyyy 'at' HH:MM:ss
+details.hold.reason=Reason for Hold
+details.hold.reason.none=Not Available
 # Unfiled Records Container Child
 details.unfiled-records-container-child.identifier=Folder Identifier
 
