Story: RM-1206 (As a records user I want to be able to add records to a hold(s) I have permission to see so that I can freeze a record)
Sub-task: RM-1321 (Implement UI for adding records/folders to hold(s))

git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/HEAD@64360 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/modules/documentlibrary/hold/remove-from-hold.get.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/modules/documentlibrary/hold/remove-from-hold.get.properties
@@ -1,5 +1,6 @@
 failure.template.not.loaded=Could not load remove from hold template
-message.empty.holds=The selected node is not in any holds
-header.remove-hold=Remove from Hold
-message.remove-success=The selected node has been successfully removed from the selected hold
-message.remove-failure=The selected node could not be removed from the selected hold(s): {0}
+message.empty.holds=There are not any holds
+header.hold=Remove from Hold
+message.hold-success=The selected node has been successfully removed from the selected hold(s)
+message.failure=Remove from Hold Failure
+message.hold-failure=The selected node could not be removed from the selected hold(s): {0}
