--- a/rm-share/config/alfresco/messages/rm.properties
+++ b/rm-share/config/alfresco/messages/rm.properties
@@ -366,7 +366,7 @@ details.hold.title.date-format=dd mmmm yyyy 'at' HH:MM:ss
 details.hold.reason=Reason for Hold
 details.hold.reason.none=Not Available
 # Unfiled Records Container Child
-details.unfiled-records-container-child.identifier=Folder Identifier
+details.unfiled-record-folder.identifier=Folder Identifier
 
 ## File Upload (upload new version)
 label.filter-description=Same type as {0}
