RM-1321 (Implement UI for adding records/folders to hold(s)) RM-1334 (Implement UI for removing an item from hold(s))
 * Added actions/capabilities so that the actions add to hold and remove from hold can be called from the UI
 * Also everything related to the freeze/unfreeze actions has been removed from rm-share

git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/HEAD@64814 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/config/alfresco/messages/rm.properties
+++ b/rm-share/config/alfresco/messages/rm.properties
@@ -64,7 +64,6 @@ label.menu.imap=IMAP
 label.menu.custom=Custom Properties
 
 ## Buttons
-button.freeze.record=Freeze Record
 button.reject.record=Reject Record
 button.request-info=Request Information
 
@@ -112,7 +111,6 @@ actions.edit-review-as-of-date=Edit Review Date
 actions.file-report=File Report
 actions.link-to=Link to...
 actions.file-to=File to...
-actions.freeze=Freeze
 actions.manage-permissions=Manage Permissions
 actions.move-to=Move to...
 actions.open-folder=Reopen Folder
@@ -125,8 +123,6 @@ actions.transfer=Transfer
 actions.transfer-complete=Complete Transfer
 actions.undeclare=Reopen Record
 actions.undo-cutoff=Undo Cutoff
-actions.unfreeze=Unfreeze
-actions.unfreeze-all=Unfreeze All
 actions.create-disposition-schedule=Create Disposition Schedule
 actions.upload-new-version=Upload New Version
 actions.view-details=View Details
@@ -139,6 +135,8 @@ actions.file-destruction-report=Generate Destruction Report
 actions.end-retention=End Retention
 action.edit.hold=Edit Hold
 actions.delete.hold=Delete Hold
+actions.add-to-hold=Add to Hold
+actions.remove-from-hold=Remove from Hold
 
 ## File Plan Action Outcomes
 message.multi-select={0} selected items
@@ -167,10 +165,6 @@ message.edit-hold.success=Successfully updated hold
 message.edit-review-as-of-date.title=Edit Review Date
 message.edit-review-as-of-date.failure=Couldn't update review as of date
 message.edit-review-as-of-date.success=Successfully updated review as of date for ''{0}''
-message.freeze.reason=Reason:
-message.freeze.title=Reason for Freeze
-message.freeze.failure=Couldn't Freeze ''{0}''
-message.freeze.success=''{0}'' now frozen
 message.open-folder.failure=Couldn't open record folder ''{0}''
 message.open-folder.success=Record folder ''{0}'' was opened
 message.relinquish.failure=Couldn't release hold
@@ -189,10 +183,6 @@ message.undeclare.failure=Couldn't reopen ''{0}''
 message.undeclare.success=''{0}'' is no longer a complete record
 message.undo-cutoff.failure=Couldn't undo cutoff for ''{0}''
 message.undo-cutoff.success=Undo cutoff on ''{0}''
-message.unfreeze.failure=Couldn't unfreeze ''{0}''
-message.unfreeze.success=''{0}'' successfully unfrozen
-message.unfreeze-all.failure=Contents of hold ''{0}'' could not be unfrozen
-message.unfreeze-all.success=Contents of hold ''{0}'' now unfrozen
 message.create-disposition-schedule.failure=Couldn't create disposition schedule for ''{0}''
 message.create-disposition-schedule.success=Disposition schedule for ''{0}'' created
 message.create-record.success=Successfully declared as record
