RM-1198 & RM-1199 - Added functionality for Copy-to and Move-to rule actions
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/HEAD@65697 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/modules/documentlibrary/copy-move-link-file-to.get.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/modules/documentlibrary/copy-move-link-file-to.get.properties
@@ -35,6 +35,7 @@ link.message.failure=Couldn't link the items
 
 ## File To
 file.node.root=File Plan
+file.node.unfiledroot=Unfiled Records
 file.title.single=File {0} to...
 file.title.multi=File {0} items to...
 file.button=File
