Story: RM-1212 (As a records user I want to perform a records search, select multiple records/record folders from the results and add them all to a hold(s) I have permission to see so that I can easily discover and freeze relevant records)
Sub-task: RM-1398 (Change RM search UI so that records/folders can be added to holds)

git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/HEAD@65917 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/search/search.get.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/search/search.get.properties
@@ -35,6 +35,7 @@ button.deletesearch=Delete Search
 button.print=Printer Layout
 button.screen=Screen Layout
 button.export=Export
+button.add-to-hold=Add to Hold
 
 # RM Results Common
 label.options=Results options
