Story: RM-1212 (As a records user I want to perform a records search, select multiple records/record folders from the results and add them all to a hold(s) I have permission to see so that I can easily discover and freeze relevant records)
Sub-tasks:

 * RM-1400 (Change the service so that all holds will be retrieved when adding multiple records/folders)
 * RM-1402 (Change the REST API so that all holds will be retrieved when adding multiple records/folders)

git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/HEAD@65918 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/modules/documentlibrary/hold/add-to-hold.get.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/modules/documentlibrary/hold/add-to-hold.get.properties
@@ -1,7 +1,7 @@
 failure.template.not.loaded=Could not load add to hold template
 message.empty.holds=There are not any available holds for the selected item
 header.hold=Add to Hold
-message.hold-success=The selected node has been successfully added to the selected hold(s)
+message.hold-success=The selected node(s) has been successfully added to the selected hold(s)
 message.failure=Add to Hold Failure
-message.hold-failure=The selected node could not be added to the selected hold(s): {0}
+message.hold-failure=The selected node(s) could not be added to the selected hold(s): {0}
 name.column.header=Name
