--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/modules/documentlibrary/hold/remove-from-hold.get.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/modules/documentlibrary/hold/remove-from-hold.get.properties
@@ -1,7 +1,7 @@
 failure.template.not.loaded=Could not load remove from hold template
 message.empty.holds=There are not any available holds for the selected item
 header.hold=Remove from Hold
-message.hold-success=The selected node has been successfully removed from the selected hold(s)
+message.hold-success=The selected node(s) has been successfully removed from the selected hold(s)
 message.failure=Remove from Hold Failure
-message.hold-failure=The selected node could not be removed from the selected hold(s): {0}
+message.hold-failure=The selected node(s) could not be removed from the selected hold(s): {0}
 name.column.header=Name
