RM-1315: Manage Permissions is not working for folder inside Holds/Unfiled Records
 * unit tests to show unfiled and holds permissions working correctly
 * fixed issues exposed by above
 * minor refactor for FilePlanPermissionService implementation to reduce complexity
 * added unit test execution to local build target



git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/HEAD@66102 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/build.xml
+++ b/build.xml
@@ -18,7 +18,7 @@
          <arg value="-DskipTests" />
       </exec>
    </target>
-
+   
    <target name="fetchWarFile">
       <xmlproperty file="../pom.xml" keepRoot="false"/>
       <exec executable="${mvn.exec}" failonerror="true">
@@ -39,7 +39,7 @@
       <delete dir="${app.folder}" failonerror="true" />
    </target>
 
-   <target name="alfresco:amp" depends="cleanTarget, install">
+   <target name="alfresco:amp" depends="cleanTarget, unitTest">
       <exec executable="${mvn.exec}" failonerror="true">
          <arg value="alfresco:amp" />
       </exec>
