RM-1358 - Added ghost on destroy option to destroy disposition action
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/HEAD@66862 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/fileplan/disposition-edit.get.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/fileplan/disposition-edit.get.properties
@@ -9,6 +9,7 @@ label.title.simple={0}
 label.title.noTime={0} {1}
 label.title.complex={0} after {1} {2}(s)
 label.title.new=New Step
+label.ghostondestroy=Ghost rather than delete
 label.transferTo=Transfer to
 label.after=After a period of
 label.from=from
