RM-1436: Terminology - 'Frozen' should be 'On Hold'
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/HEAD@67171 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/config/alfresco/messages/rm.properties
+++ b/rm-share/config/alfresco/messages/rm.properties
@@ -207,7 +207,7 @@ status.rm-closed=Closed
 status.rm-cutoff=Cutoff
 status.rm-cutoff-folder=Cutoff
 status.rm-destroyed=Destroyed
-status.rm-frozen=Frozen
+status.rm-frozen=On Hold
 status.rm-multi-parent=Linked in Multiple Record Folders
 status.rm-open=Open
 status.rm-transfer=Transfer Pending
