--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/search/search.get.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/components/search/search.get.properties
@@ -25,7 +25,7 @@ label.undeclared=Include Incomplete
 label.vital=Show Vital only
 label.recordFolders=Show Record Folders
 label.recordCategories=Show Record Categories
-label.frozen=Show Frozen only (Excluded when not selected)
+label.frozen=Show On Hold only (Excluded when not selected)
 label.cutoff=Show Cut Off only
 
 button.newsearch=New Search
