RM-1211: Generate hold report
 * FileHoldReport capability added (and patched)
 * hold report type added to report model
 * hold template added, bootstraped (and patched)
 * UI action to file hold report added and sensitive to capability
 * report actions refactored into a single, general purpose, file report action (can be exposed as rule in future)
 * refactoring and extending of report generators (including declarative report generator)
 * unit test for file report action
 * integration test for hold report generation
 * added Sprin custom property editor registrar and registered QName property editor, this allows short name string forms of
   QNames to be specified and converted to QName from bean definitions (perhaps something useful for core)



git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/HEAD@68235 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/config/alfresco/messages/rm.properties
+++ b/rm-share/config/alfresco/messages/rm.properties
@@ -137,6 +137,7 @@ action.edit.hold=Edit Hold
 actions.delete.hold=Delete Hold
 actions.add-to-hold=Add to Hold
 actions.remove-from-hold=Remove from Hold
+actions.file-hold-report=Generate Hold Report
 
 ## File Plan Action Outcomes
 message.multi-select={0} selected items
@@ -199,6 +200,8 @@ message.end-retention.failure=Couldn't end retention
 message.end-retention.success=Retention ended
 message.file-success=Successfully filed report as ''{0}''
 message.file-failure=The file operation could not be completed
+message.file-hold-report.failure=Couldn't generate hold report
+message.file-hold-report.success=Hold report generated
 
 ## File Plan Status Indicators
 status.rm-accession=Accession Pending
