RM-1479 - Added message property for rules indicator
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/HEAD@68325 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/config/alfresco/messages/rm.properties
+++ b/rm-share/config/alfresco/messages/rm.properties
@@ -224,6 +224,7 @@ status.rm-pdf-record=Pdf Record
 status.rm-scanned-record=Scanned Record
 status.rm-web-record=Web Record
 status.rm-is-record=Record
+status.rules=Folder has rules applied
 # Exif
 status.exif=EXIF metadata available
 
