RM-1472, Corrected logic that selected the copy/move/link rule dialog title
git-svn-id: https://svn.alfresco.com/repos/alfresco-enterprise/modules/recordsmanagement/HEAD@68486 c4b6b30b-aa2e-2d43-bbcb-ca4b014f7261

--- a/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/modules/documentlibrary/copy-move-link-file-to.get.properties
+++ b/rm-share/config/alfresco/site-webscripts/org/alfresco/rm/modules/documentlibrary/copy-move-link-file-to.get.properties
@@ -25,6 +25,7 @@ move.message.failure=Couldn't move the items
 
 ## Link To
 link.node.root=File Plan
+link.node.unfiledroot=Unfiled Records
 link.title.single=Link {0} to...
 link.title.multi=Link {0} items to...
 link.button=Link
